# sdl2-maprgb-test

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
